force-app/main/default/objects/AI_Evidence__c/AI_Evidence__c.object-meta.xml
<CustomObject>
    <label>AI Evidence</label>
    <pluralLabel>AI Evidence</pluralLabel>
    <nameField>
        <displayFormat>AIE-{00000000}</displayFormat>
        <label>Evidence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>