force-app/main/default/objects/AI_Evidence__c/fields/Excerpt__c.field-meta.xml
<CustomField>
    <fullName>Excerpt__c</fullName>
    <label>Excerpt</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>