force-app/main/default/objects/AI_Evidence__c/fields/Relevance_Score__c.field-meta.xml
<CustomField>
    <fullName>Relevance_Score__c</fullName>
    <label>Relevance Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>